[gd_scene load_steps=4 format=3 uid="uid://bns6e1o8g2e62"]

[ext_resource type="Script" uid="uid://i47okfd2ru12" path="res://scripts/rug.gd" id="1_isuqo"]
[ext_resource type="Texture2D" uid="uid://bec24bnopn3d2" path="res://assets/visuals/ART/GMTK game jam 25/rug room 1.png" id="2_isuqo"]
[ext_resource type="PackedScene" uid="uid://lfwj3udiip6s" path="res://scenes/dialog_box.tscn" id="3_yt1t0"]

[node name="Rug" type="Node2D"]
scale = Vector2(5.27103, 3.81552)
script = ExtResource("1_isuqo")

[node name="FirstSprite" type="Sprite2D" parent="."]
position = Vector2(-0.569149, -21.2291)
scale = Vector2(0.325277, 0.493173)
texture = ExtResource("2_isuqo")

[node name="DialogBox" parent="." instance=ExtResource("3_yt1t0")]
position = Vector2(-2.65603, 98.807)
rotation = -0.000650526
scale = Vector2(0.0905909, 0.0901045)
dialog = Array[String](["Move rug?"])

[node name="Yes" type="Button" parent="."]
offset_left = -47.9982
offset_top = 44.2928
offset_right = -13.9982
offset_bottom = 68.2928
scale = Vector2(0.885501, 0.65642)
text = "Yes"

[node name="No" type="Button" parent="."]
offset_left = 14.9876
offset_top = 44.5549
offset_right = 45.9876
offset_bottom = 68.5549
scale = Vector2(0.797215, 0.643151)
text = "No"

[connection signal="pressed" from="Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_no_pressed"]
